# hyperpararc

./: CMakeLists.txt  README.md
conf/: sysSetting.xml
offline/: BUTTERFLY_6_4_8.xml  BUTTERFLY_8_6_32.xml  Clay_14_10_256.xml  Clay_4_2_4_48.xml  Clay_5_3_8.xml  Clay_6_4_8.xml  Clay_9_6_27.xml  EVENODD_7_5_4.xml  RSCONV_14_10_1.xml  RSCONV_4_2_1.xml  RSPIPE_12_8_1.xml  RSPIPE_4_2_1.xml
offlineAffinity/: BUTTERFLY_10_8_128.xml  BUTTERFLY_12_10_512.xml  Clay_12_8_64.xml  Clay_14_10_256.xml  Clay_16_12_256.xml  Clay_4_2_4_57.ml  Clay_4_2_4_affinity.xml
scripts/: start.py  stop.py
scripts/cache/: clearcache.py
scripts/conf/: createconf.py
scripts/data/: clean_standalone_data.py  gen_simulation_data.py  gen_standalone_data.py  gen_standalone_encode_data.py
scripts/network/: clearbdwt.py  setbdwt.py
scripts/pretest/: fullnode.py
scripts/simulation/: simulation_varying_agentsnum.py  (+3 more)
src/: BruteForce.cc  BruteForceAffinity.cc  CMakeLists.txt  CodeTest.cc  GenData.cc  MulSim_centralize.cc  MulSim_offline.cc  MulSim_parallel.cc  ParaAgent.cc  ParaCoordinator.cc  Sim_balance.cc  Sim_centralize.cc  Sim_offline.cc  Sim_parallel.cc  Sim_selectiveec.cc  SingleMLP.cc
src/common/: CMakeLists.txt  Config.cc  Config.hh  Coordinator.cc  Coordinator.hh  DataPacket.cc  DataPacket.hh  Globaldata.cc  Globaldata.hh  Stripe.cc  Stripe.hh  StripeStore.cc  StripeStore.hh  TradeoffPoints.cc  TradeoffPoints.hh  Worker.cc  Worker.hh
src/ec/: BUTTERFLY.cc  CMakeLists.txt  Clay.cc  Clay.hh  ECBase.hh  ECDAG.cc  ECDAG.hh  ECNode.cc  ECNode.hh  NodeBatchTask.cc  NodeBatchTask.hh  RDP.cc  RDP.hh  Task.cc  Task.hh
src/inc/: include.hh
src/protocol/: AGCommand.cc  AGCommand.hh
src/sol/: BalanceSolution.cc  BalanceSolution.hh  CMakeLists.txt  CentSolution.cc  CentSolution.hh  FlowGraph.cc  FlowGraph.hh  OfflineSolution.cc  OfflineSolution.hh  ParallelSolution.cc  ParallelSolution.hh  RepairBatch.cc  RepairBatch.hh  SecSolution.cc  SecSolution.hh  SolutionBase.cc  SolutionBase.hh
src/util/: BlockingQueue.hh  DistUtil.cc  Logger.hh
(+35 files in other folders)
