# minimum version of cmake
cmake_minimum_required (VERSION 3.1)

# project name
project (ParaFullNode_exe)

add_subdirectory(common)
#add_subdirectory(dist)
add_subdirectory(ec)
add_subdirectory(sol)
add_subdirectory(protocol)
add_subdirectory(util)

aux_source_directory(. DIR_SRCS)
add_executable(Sim_centralize Sim_centralize.cc)
add_executable(Sim_offline Sim_offline.cc)
add_executable(Sim_parallel Sim_parallel.cc)
add_executable(Sim_balance Sim_balance.cc)
add_executable(Sim_selectiveec Sim_selectiveec.cc)
add_executable(MulSim_centralize MulSim_centralize.cc)
add_executable(MulSim_offline MulSim_offline.cc)
add_executable(MulSim_parallel MulSim_parallel.cc)
add_executable(ParaCoordinator ParaCoordinator.cc)
add_executable(ParaAgent ParaAgent.cc)
add_executable(CodeTest CodeTest.cc)
add_executable(GenData GenData.cc)
add_executable(SingleMLP SingleMLP.cc)
add_executable(BruteForce BruteForce.cc)
add_executable(BruteForceAffinity BruteForceAffinity.cc)

target_link_libraries(Sim_centralize common ec sol util)
target_link_libraries(Sim_offline common ec sol util)
target_link_libraries(Sim_parallel common ec sol util)
target_link_libraries(Sim_balance common ec sol util)
target_link_libraries(Sim_selectiveec common ec sol util)
target_link_libraries(MulSim_centralize common ec sol util pthread)
target_link_libraries(MulSim_offline common ec sol util pthread)
target_link_libraries(MulSim_parallel common ec sol util pthread)
target_link_libraries(ParaCoordinator common ec sol util protocol)
target_link_libraries(ParaAgent common ec sol util protocol pthread)
target_link_libraries(CodeTest common ec sol util protocol pthread)
target_link_libraries(GenData common ec sol util protocol pthread)
target_link_libraries(SingleMLP common ec sol util protocol pthread)
target_link_libraries(BruteForce common ec sol util protocol pthread)
target_link_libraries(BruteForceAffinity common ec sol util protocol pthread)